log3.txt
   Compiling sempal v8.0.0 (X:\sempal)
warning: unused imports: `infer_embedding_from_logmel` and `infer_embedding_query`
  --> src\analysis\embedding\mod.rs:27:22
   |
27 |     infer_embedding, infer_embedding_from_logmel, infer_embedding_query,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `PANNS_LOGMEL_LEN`, `PannsLogMelScratch`, and `build_panns_logmel_into`
  --> src\analysis\embedding\mod.rs:29:25
   |
29 | pub(crate) use logmel::{PANNS_LOGMEL_LEN, PannsLogMelScratch, build_panns_logmel_into};
   |                         ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `reset_panns_model` and `warmup_panns`
  --> src\analysis\embedding\mod.rs:30:36
   |
30 | pub(crate) use model::{PannsModel, reset_panns_model, try_reset_panns_model, warmup_panns};
   |                                    ^^^^^^^^^^^^^^^^^                         ^^^^^^^^^^^^

warning: unused imports: `stft_power_frames_into_flat` and `stft_power_frames`
  --> src\analysis\panns_preprocess\mod.rs:13:23
   |
13 | pub(crate) use stft::{stft_power_frames, stft_power_frames_into_flat};
   |                       ^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `BPM_MIN_SELECTION_DIVISOR`
 --> src\egui_app\controller\library\mod.rs:3:54
  |
3 |     EguiController, StatusTone, MIN_SELECTION_WIDTH, BPM_MIN_SELECTION_DIVISOR,
  |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::sample_sources::Rating`
  --> src\egui_app\controller\library\collections_controller\mod.rs:10:5
   |
10 | use crate::sample_sources::Rating;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::egui_app::controller::library::analysis_jobs`
 --> src\egui_app\controller\library\similarity_prep\orchestration.rs:5:5
  |
5 | use crate::egui_app::controller::library::analysis_jobs;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashMap`
 --> src\egui_app\controller\library\wavs\browser_search_worker.rs:7:5
  |
7 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> src\egui_app\controller\library\wavs\browser_search_worker.rs:9:5
  |
9 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `MIN_SELECTION_WIDTH`
 --> src\egui_app\controller\playback\mod.rs:2:52
  |
2 | pub(crate) use super::{EguiController, StatusTone, MIN_SELECTION_WIDTH, BPM_MIN_SELECTION_DIVISOR};
  |                                                    ^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::egui_app::state::*`
 --> src\egui_app\controller\playback\mod.rs:3:16
  |
3 | pub(crate) use crate::egui_app::state::*;
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::egui_app::state::*`
 --> src\egui_app\controller\ui\mod.rs:3:16
  |
3 | pub(crate) use crate::egui_app::state::*;
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `CollectionId`, `DecodedWaveform`, `FolderBrowserUiState`, `PlayheadState`, `ProgressOverlayState`, `Rating`, `SampleBrowserSort`, `SampleBrowserState`, `TriageFlagFilter`, `WaveformImage`, and `sample_sources::scanner::ScanMode`
  --> src\egui_app\controller.rs:19:9
   |
19 |         FolderBrowserUiState, PlayheadState, ProgressOverlayState, SampleBrowserSort,
   |         ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^
20 |         SampleBrowserState, TriageFlagColumn, TriageFlagFilter, UiState, WaveformImage,
   |         ^^^^^^^^^^^^^^^^^^                    ^^^^^^^^^^^^^^^^           ^^^^^^^^^^^^^
...
23 |     sample_sources::scanner::ScanMode,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
24 |     sample_sources::{
25 |         Collection, CollectionId, Rating, SampleSource, SourceDatabase, SourceDbError, SourceId,
   |                     ^^^^^^^^^^^^  ^^^^^^
...
29 |     waveform::{DecodedWaveform, WaveformRenderer},
   |                ^^^^^^^^^^^^^^^

warning: unused import: `super::super::*`
 --> src\egui_app\controller\tests\folders_search.rs:2:5
  |
2 | use super::super::*;
  |     ^^^^^^^^^^^^^^^

warning: unused import: `super::super::*`
 --> src\egui_app\controller\tests\trash.rs:2:5
  |
2 | use super::super::*;
  |     ^^^^^^^^^^^^^^^

warning: unused import: `super::super::*`
 --> src\egui_app\controller\tests\waveform_nav_cursor.rs:2:5
  |
2 | use super::super::*;
  |     ^^^^^^^^^^^^^^^

warning: unused import: `std::io::Write`
   --> src\wav_sanitize.rs:323:9
    |
323 |     use std::io::Write;
    |         ^^^^^^^^^^^^^^

warning: unused import: `Write`
   --> src\wav_sanitize.rs:374:29
    |
374 |         use std::io::{Read, Write};
    |                             ^^^^^

warning: use of deprecated associated function `egui::ComboBox::from_id_source`: Renamed from_id_salt
   --> src\egui_app\ui\sample_browser_filter.rs:103:29
    |
103 |             egui::ComboBox::from_id_source("browser_sort")
    |                             ^^^^^^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `egui::Ui::allocate_ui_at_rect`: Use `allocate_new_ui` instead
   --> src\egui_app\ui\sources_panel\mod.rs:167:16
    |
167 |             ui.allocate_ui_at_rect(folder_rect, |ui| {
    |                ^^^^^^^^^^^^^^^^^^^

warning: use of deprecated method `egui::Ui::allocate_ui_at_rect`: Use `allocate_new_ui` instead
   --> src\egui_app\ui\sources_panel\mod.rs:175:16
    |
175 |             ui.allocate_ui_at_rect(drop_targets_rect, |ui| {
    |                ^^^^^^^^^^^^^^^^^^^

error[E0502]: cannot borrow `controller.history.random_history` as immutable because it is also borrowed as mutable
  --> src\egui_app\controller\playback\random_nav.rs:95:13
   |
92 |           let Some(entry) = controller.wav_entry(idx) else {
   |                             ---------- mutable borrow occurs here
...
95 |           if !controller
   |  _____________^
96 | |             .history
97 | |             .random_history
   | |___________________________^ immutable borrow occurs here
98 |               .has_played(&source_id, &entry.relative_path)
   |                                       -------------------- mutable borrow later used here

warning: variable does not need to be mutable
  --> src\egui_app\ui\sources_panel\mod.rs:83:17
   |
83 |             let mut drop_targets_height = self
   |                 ----^^^^^^^^^^^^^^^^^^^
   |                 |
   |                 help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> src\http_client.rs:69:9
   |
69 |     let mut reader = response.into_reader();
   |         ----^^^^^^
   |         |
   |         help: remove this `mut`

warning: variable does not need to be mutable
  --> src\http_client.rs:89:9
   |
89 |     let mut reader = response.into_reader();
   |         ----^^^^^^
   |         |
   |         help: remove this `mut`

warning: unused variable: `dir`
   --> src\issue_gateway\token_store.rs:495:20
    |
495 | fn sync_parent_dir(dir: &Path) -> Result<(), IssueTokenStoreError> {
    |                    ^^^ help: if this is intentional, prefix it with an underscore: `_dir`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src\wav_sanitize.rs:186:9
    |
186 |     let mut changed = false;
    |         ----^^^^^^^
    |         |
    |         help: remove this `mut`

warning: variable does not need to be mutable
   --> src\waveform\mod.rs:379:9
    |
379 |     let mut file = std::fs::File::open(path).map_err(|source| WaveformLoadError::Read {
    |         ----^^^^
    |         |
    |         help: remove this `mut`

For more information about this error, try `rustc --explain E0502`.
warning: `sempal` (lib test) generated 27 warnings
error: could not compile `sempal` (lib test) due to 1 previous error; 27 warnings emitted
